log
Sun, May  4, 2025  8:48:31 PM: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
5729e4d
Sun, May  4, 2025  8:55:05 PM: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  11|6
total_score: 15/70
60a6444
Sun, May  4, 2025  8:55:24 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
65aa14c
Sun, May  4, 2025  8:55:52 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
6e8c60c
Sun, May  4, 2025  9:08:49 PM: 
 treemap.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
 tests:  0|0
812b95e
Sun, May  4, 2025  9:09:03 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
db6cd7b
Sun, May  4, 2025  9:11:01 PM: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
107b568
Sun, May  4, 2025  9:24:20 PM: 
 treemap.c | 25 ++++++++++++++++++++++++-
 1 file changed, 24 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'removeNode':
treemap.c:103:31: error: implicit declaration of function 'minimun' [-Werror=implicit-function-declaration]
         TreeNode * minRight = minimun(node->right);
                               ^~~~~~~
treemap.c:103:31: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
cc1.exe: all warnings being treated as errors
2db7a40
